Note updates in system for next release.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,17 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.16
+=========================
+ -- Fixes for reported problems:
+   - slurm/268: Slurmctld could deadlock if there was a delay in the 
+     termination of a large node-count job. An EPILOG_COMPLETE RPC was 
+     added so that slurmd could notify slurmctld whenever the job termination 
+     was completed.
+   - slurm/270: Sinfo segfaulted if a configured not lacked a partition
+   - slurm/278: Scontrol sets exit code to one on any error in any command.
+     Otherwise the exit code is zero.
+
 * Changes in SLURM 0.2.15
 =========================
  -- Fixes for reported problems:
