--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -11,6 +11,8 @@ documents those changes that are of interest to users and admins.
    - slurm/270: Sinfo segfaulted if a configured not lacked a partition
    - slurm/278: Scontrol sets exit code to one on any error in any command.
      Otherwise the exit code is zero.
+ -- Slurmd was sometimes killing itself if a KILL_JOB RPC was processed 
+    before the job was fully initiated (the job's pid was still zero).
 
 * Changes in SLURM 0.2.15
 =========================
