o adding missing entry for SLURM_TIMELIMIT environment variable

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -510,6 +510,9 @@ SLURM_STDINMODE
 SLURM_STDOUTMODE
 \fB\-o, \-\-output\fR=\fImode\fR
 .TP
+SLURM_TIMELIMIT
+\fB\-t, \-\-time\fR=\fIminutes\fR
+.TP
 SLURM_WAIT
 \fB\-W, \-\-wait\fR=\fIseconds\fR
 .PP
