--- a/trunk/doc/man/man3/slurm_free_ctl_conf.3
+++ b/trunk/doc/man/man3/slurm_free_ctl_conf.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm informational calls"
+.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm informational calls"
 .SH "NAME"
 slurm_free_ctl_conf, slurm_load_ctl_conf, 
 slurm_print_ctl_conf\- Slurm information reporting functions
@@ -68,6 +68,9 @@ is set appropriately.
 \fBSLURM_NO_CHANGE_IN_DATA\fR Data has not changed since \fBupdate_time\fR.
 .LP
 \fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link your code.
+.LP
+\fBSLURM_PROTOCOL_SOCKET_IMPL_TIMEOUT\fR Timeout in communicating with 
+SLURM controller.
 .SH "EXAMPLE"
 .LP 
 #include <stdio.h>
