--- a/trunk/doc/man/man3/slurm_free_job_info_msg.3
+++ b/trunk/doc/man/man3/slurm_free_job_info_msg.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm job information reporting functions"
+.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm job information reporting functions"
 .SH "NAME"
 slurm_free_job_info_msg, slurm_load_jobs, 
 slurm_print_job_info, slurm_print_job_info_msg
@@ -110,6 +110,9 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 \fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link your code.
 .LP
 \fBESLURM_INVALID_JOB_ID\fR Request for information about a non-existent job.
+.LP
+\fBSLURM_PROTOCOL_SOCKET_IMPL_TIMEOUT\fR Timeout in communicating with 
+SLURM controller.
 .SH "EXAMPLE"
 .LP 
 #include <stdio.h>
