--- a/trunk/doc/man/man3/slurm_free_job_step_info_response_msg.3
+++ b/trunk/doc/man/man3/slurm_free_job_step_info_response_msg.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm job step information functions"
+.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm job step information functions"
 .SH "NAME"
 \fBslurm_free_job_step_info_response_msg, slurm_get_job_steps,
 slurm_print_job_step_info, slurm_print_job_step_info_msg
@@ -103,6 +103,9 @@ code is set appropriately.
 \fBSLURM_NO_CHANGE_IN_DATA\fR Data has not changed since \fBupdate_time\fR.
 .LP
 \fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link your code.
+.LP
+\fBSLURM_PROTOCOL_SOCKET_IMPL_TIMEOUT\fR Timeout in communicating with 
+SLURM controller.
 .SH "EXAMPLE"
 .LP 
 #include <stdio.h>
