--- a/trunk/doc/man/man3/slurm_free_partition_info.3
+++ b/trunk/doc/man/man3/slurm_free_partition_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm partition information reporting functions"
+.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm partition information reporting functions"
 .SH "NAME"
 slurm_free_partition_info, slurm_load_partitions, 
 slurm_print_partition_info, slurm_print_partition_info_msg
@@ -78,7 +78,11 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 .LP
 \fBSLURM_NO_CHANGE_IN_DATA\fR Data has not changed since \fBupdate_time\fR.
 .LP
-\fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link your code.
+\fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link 
+your code.
+.LP
+\fBSLURM_PROTOCOL_SOCKET_IMPL_TIMEOUT\fR Timeout in communicating with 
+SLURM controller.
 .SH "EXAMPLE"
 .LP 
 #include <stdio.h>
