--- a/trunk/doc/man/man3/slurm_kill_job.3
+++ b/trunk/doc/man/man3/slurm_kill_job.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm job signal calls"
+.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm job signal calls"
 .SH "NAME"
 slurm_kill_job, slurm_kill_job_step \- Slurm job signal calls
 .SH "SYNTAX"
@@ -55,6 +55,9 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 \fBESLURM_ACCESS_DENIED\fR the requesting user lacks authorization for the requested action (e.g. trying to delete or modify another user's job). 
 .LP
 \fBESLURM_INTERCONNECT_FAILURE\fR failed to configure the node interconnect. 
+.LP
+\fBSLURM_PROTOCOL_SOCKET_IMPL_TIMEOUT\fR Timeout in communicating with 
+SLURM controller.
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
 Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
