--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "August 2003" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
 slurm_init_part_desc_msg,
 slurm_reconfigure, slurm_shutdown, slurm_update_job, 
@@ -87,19 +87,25 @@ name specified by this function does not already exist, a new partition is creat
 with the supplied parameters. This function may only be successfully executed by user root.
 .SH "RETURN VALUE"
 .LP
-On success, zero is returned. On error, -1 is returned, and the Slurm error code is set appropriately.
+On success, zero is returned. On error, -1 is returned, and the Slurm error 
+code is set appropriately.
 .SH "ERRORS"
 .LP
-\fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link your code.
+\fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link your 
+code.
 .LP
 \fBESLURM_INVALID_NODE_NAME\fR the requested node name(s) is/are not valid. 
 .LP
-\fBESLURM_INVALID_NODE_STATE\fR the specified state node state or requested node
-state transition is not valid. 
+\fBESLURM_INVALID_NODE_STATE\fR the specified state node state or requested 
+node state transition is not valid. 
 .LP
 \fBESLURM_INVALID_PARTITION_NAME\fR the requested partition name is not valid. 
 .LP
-\fBESLURM_ACCESS_DENIED\fR the requesting user lacks authorization for the requested action (e.g. trying to delete or modify another user's job). 
+\fBESLURM_ACCESS_DENIED\fR the requesting user lacks authorization for 
+the requested action (e.g. trying to delete or modify another user's job). 
+.LP
+\fBSLURM_PROTOCOL_SOCKET_IMPL_TIMEOUT\fR Timeout in communicating with 
+SLURM controller.
 .SH "EXAMPLE"
 .LP 
 #include <stdio.h>
