o fix bug in sinfo manual page example

--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -264,7 +264,7 @@ debug*    up        30:00        8 no   no    all        8 idle  dev[0-7]
 .br
 Report only those nodes that are in state DRAINED:
 .br
-> sinfo --state=drained
+> sinfo --states=drained
 .br
 PARTITION AVAIL NODES TIMELIMIT STATE  NODELIST
 .br
