--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -46,13 +46,16 @@ int \fBslurm_update_partition\fR (
 Generate a core file if value is non-zero.
 .TP
 \fIupdate_job_msg_ptr\fP
-Specifies the pointer to a job update request specification. See slurm.h for full details on the data structure's contents. 
+Specifies the pointer to a job update request specification. See slurm.h for full 
+details on the data structure's contents. 
 .TP 
 \fIupdate_node_msg_ptr\fP
-Specifies the pointer to a node update request specification. See slurm.h for full details on the data structure's contents. 
+Specifies the pointer to a node update request specification. See slurm.h for full 
+details on the data structure's contents. 
 .TP 
 \fIupdate_part_msg_ptr\fP
-Specifies the pointer to a partition update request specification. See slurm.h for full details on the data structure's contents. 
+Specifies the pointer to a partition update request specification. See slurm.h for 
+full details on the data structure's contents. 
 .SH "DESCRIPTION"
 .LP 
 \fBslurm_init_part_desc_msg\fR Initialize the contents of a partition descriptor 
@@ -67,24 +70,35 @@ only be successfully executed by user root.
 \fBslurm_shutdown\fR Request that the Slurm controller terminate. This function may 
 only be successfully executed by user root.
 .LP 
-\fBslurm_update_job\fR Request that the configuration of a job be updated. Note that 
-most, but not all parameters of a job may be changed by this function. Initialize the 
-data structure using the \fBslurm_init_job_desc_msg\fR function prior to setting 
-values of the parameters to be changed. Note: \fBslurm_init_job_desc_msg\fR is not 
-equivalent to setting the data structure values to zero. This function may only be 
-successfully executed by user root.
+\fBslurm_update_job\fR Request that the configuration of a job be updated. Note 
+that most, but not all parameters of a job may be changed by this function. 
+Initialize the data structure using the \fBslurm_init_job_desc_msg\fR function 
+prior to setting values of the parameters to be changed. Note: 
+\fBslurm_init_job_desc_msg\fR is not equivalent to setting the data structure 
+values to zero. This function may only be successfully executed by user root. 
+Note the job priority of zero represents a job that will not be scheduled. 
+Slurm uses the priority one to represent jobs that can not be scheduled until 
+additional nodes are returned to service (i.e. not DOWN or DRAINED). This 
+permits lower priority jobs to utilize those resources which are available.
 .LP 
-\fBslurm_update_node\fR Request that the state of one or more nodes be updated. Note that the state of a node (e.g. DRAINING, IDLE, etc.) may be changed, but its hardware configuration may not be changed by this function. If the hardware configuration of a node changes, update the Slurm configuration file and execute the \fBslurm_reconfigure\fR function. This function may only be successfully executed by user root. The node state flag \fBNODE_STATE_NO_RESPOND\fR may be 
-specified without changing the underlying node state. This might be used by some external 
-system monitoring tool to inform the Slurm controller that a node has become unusable.
+\fBslurm_update_node\fR Request that the state of one or more nodes be updated. 
+Note that the state of a node (e.g. DRAINING, IDLE, etc.) may be changed, but 
+its hardware configuration may not be changed by this function. If the hardware 
+configuration of a node changes, update the Slurm configuration file and execute 
+the \fBslurm_reconfigure\fR function. This function may only be successfully 
+executed by user root. The node state flag \fBNODE_STATE_NO_RESPOND\fR may be 
+specified without changing the underlying node state. This might be used by some 
+external system monitoring tool to inform the Slurm controller that a node has 
+become unusable.
 .LP 
 \fBslurm_update_part\fR Request that the configuration of a partition be updated. 
-Note that most, but not all parameters of a partition may be changed by this function. 
-Initialize the data structure using the \fBslurm_init_part_desc_msg\fR function prior 
-to setting values of the parameters to be changed. Note: \fBslurm_init_part_desc_msg\fR 
-is not equivalent to setting the data structure values to zero. If the partition 
-name specified by this function does not already exist, a new partition is created 
-with the supplied parameters. This function may only be successfully executed by user root.
+Note that most, but not all parameters of a partition may be changed by this 
+function. Initialize the data structure using the \fBslurm_init_part_desc_msg\fR 
+function prior to setting values of the parameters to be changed. Note: 
+\fBslurm_init_part_desc_msg\fR is not equivalent to setting the data structure 
+values to zero. If the partition name specified by this function does not 
+already exist, a new partition is created with the supplied parameters. This 
+function may only be successfully executed by user root.
 .SH "RETURN VALUE"
 .LP
 On success, zero is returned. On error, -1 is returned, and the Slurm error 
