Correct default PluginDir value, /usr/local/lib/slurm.

--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -1,4 +1,4 @@
-.TH "slurm.conf" "5" "September 2003" "Morris Jette" "Slurm configuration file"
+.TH "slurm.conf" "5" "October 2003" "Morris Jette" "Slurm configuration file"
 .SH "NAME"
 slurm.conf \- Slurm configuration file 
 .SH "DESCRIPTION"
@@ -133,7 +133,7 @@ A value of zero prevents any job record purging.
 Identifies the places in which to look for SLURM plugins. 
 This is a colon-separated list of directories, like the PATH 
 environment variable. 
-The default value is "/usr/local/lib".
+The default value is "/usr/local/lib/slurm".
 .TP
 \fBPrioritize\fR
 Fully qualified pathname of a program to execute in order to establish 
