--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -130,13 +130,19 @@ Specify an alternate distribution method for remote processes.
 .TP
 .B block
 The block method of distribution will allocate processes in-order to
-the cpus on a node. This is the default behavior if the number of tasks 
+the cpus on a node. If the number of processes exceeds the number of 
+cpus on all of the nodes in the allocation then all nodes will be 
+utilized. For example, consider an allocation of three nodes each with 
+two cpus. A four\-process block distribution request will distribute 
+those processes to the nodes with processes one and two on the first 
+node, process three on the second node, and process four on the third node.  
+Block distribution is the default behavior if the number of tasks 
 exceeds the number of nodes requested.
 .TP
 .B cyclic
 The cyclic method distributes processes in a round-robin fashion across
-the allocated nodes. That is, process 1 will be allocated to the first
-node, process 2 to the second, and so on. This is the default behavior
+the allocated nodes. That is, process one will be allocated to the first
+node, process two to the second, and so on. This is the default behavior
 if the number of tasks is no larger than the number of nodes requested.
 .RE
 .TP
