Note that SlurmctldPort and SlurmdPort should not conflict.

--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -174,7 +174,9 @@ The default value is "/var/run/slurmctld.pid".
 \fBSlurmctldPort\fR
 The port number that the SLURM controller, \fBslurmctld\fR, listens 
 to for work. The default value is SLURMCTLD_PORT as established at system 
-build time.
+build time.  NOTE: Either slurmctld and slurmd daemons must not execute 
+on the same nodes or the values of \fBSlurmctldPort\fR and \fBSlurmdPort\fR
+must be different.
 .TP
 \fBSlurmctldTimeout\fR
 The interval, in seconds, that the backup controller waits for the 
@@ -198,7 +200,9 @@ The default value is "/var/run/slurmd.pid".
 \fBSlurmdPort\fR
 The port number that the SLURM compute node daemon, \fBslurmd\fR, listens 
 to for work. The default value is SLURMD_PORT as established at system 
-build time.
+build time. NOTE: Either slurmctld and slurmd daemons must not execute
+on the same nodes or the values of \fBSlurmctldPort\fR and \fBSlurmdPort\fR
+must be different.
 .TP
 \fBSlurmdSpoolDir\fR
 Fully qualified pathname of a file into which the \fBslurmd\fR daemon's state 
