Add "usage" command.

--- a/trunk/doc/man/man1/scancel.1
+++ b/trunk/doc/man/man1/scancel.1
@@ -1,4 +1,4 @@
-.TH SCANCEL "1" "January 2003" "scancel 0.1" "Slurm components"
+.TH SCANCEL "1" "October 2003" "scancel 0.2" "Slurm components"
 .SH "NAME"
 scancel \- Used to signal jobs or job steps that are under the control of Slurm.
 .SH "SYNOPSIS"
@@ -13,7 +13,7 @@ be printed and the job will not be signaled.
 .TP
 OPTIONS
 .TP
-\fB\-?\fR, \fB\-\-help\fR
+\fB\-H\fR, \fB\-\-help\fR, \fB\-\-usage\fR
 Print a help message describing the usage of scancel.
 .TP
 \fB\-i\fR, \fB\-\-interactive\fR
