Define new command-line option "--usage"

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -1,4 +1,4 @@
-.TH SQUEUE "1" "September 2003" "squeue 0.2" "Slurm components"
+.TH SQUEUE "1" "October 2003" "squeue 0.2" "Slurm components"
 
 .SH "NAME"
 squeue \- Used to view information of jobs located in the scheduling queue.
@@ -13,7 +13,7 @@ squeue \- Used to view information of jobs located in the scheduling queue.
 .TP
 OPTIONS
 .TP
-\fB\-?\fR, \fB\-\-help\fR
+\fB\-H\fR, \fB\-\-help\fR, \fB\-\-usage\fR
 Print a help message describing the usage of \fBsqueue\fR.
 .TP
 \fB\-h\fR, \fB\-\-noheader\fR
