Describe differences between --help and --usage options.

--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -11,8 +11,10 @@ system running SLURM.
 
 .SH "OPTIONS"
 .TP
-\fB\-H\fR, \fB\-\-help\fR, \fB\-\-usage\fR
-Print a help message describing the usage of \fBsinfo\fR.
+\fB\-\-help\fR,
+Print a message describing all \fBsinfo\fR options.
+\fB\-\-usage\fR
+Print a brief message listing the \fBsinfo\fR options.
 .TP
 \fB\-e\fR, \fB\-\-exact\fR
 If set, do not group node information on multiple nodes unless their 
