Describe difference between --help and --usage options.

--- a/trunk/doc/man/man1/scancel.1
+++ b/trunk/doc/man/man1/scancel.1
@@ -13,8 +13,11 @@ be printed and the job will not be signaled.
 .TP
 OPTIONS
 .TP
-\fB\-H\fR, \fB\-\-help\fR, \fB\-\-usage\fR
-Print a help message describing the usage of scancel.
+\fB\-\-help\fR
+Print a help message describing all \fBscancel\fR options.
+.TP
+\fB\-\-usage\fR
+Print a brief help message listing the \fBscancel\fR options.
 .TP
 \fB\-i\fR, \fB\-\-interactive\fR
 Interactive mode. Confirm each job_id.step_id before performing the cancel operation.
