Differential between --help and --usage output.

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -13,8 +13,11 @@ squeue \- Used to view information of jobs located in the scheduling queue.
 .TP
 OPTIONS
 .TP
-\fB\-H\fR, \fB\-\-help\fR, \fB\-\-usage\fR
-Print a help message describing the usage of \fBsqueue\fR.
+\fB\-\-help\fR
+Print a help message describing all options \fBsqueue\fR.
+.TP
+\fB\-\-usage\fR
+Print a brief help message listing the \fBsqueue\fR options.
 .TP
 \fB\-h\fR, \fB\-\-noheader\fR
 Do not print a header on the output.
