Note updates for new release.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,17 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.21
+=========================
+ -- Fixes for reported problems:
+   - slurm/253: Try using different port if connect() fails (was rarely 
+     failing when an existing defunct connection was in TIME_WAIT state)
+ -- Assorted changes to support RedHat Enterprise Linux 3.0 and IA64
+ -- Slurmctld was sometimes inappropriately setting a job's priority 
+    to 1 when a node was down (even if up nodes could be used for the 
+    job when a running job completes)
+ -- Convert all user commands from use of popt library to getopt_long()
+
 * Changes in SLURM 0.2.20
 =========================
  -- Fixes for reported problems:
