--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -151,7 +151,7 @@ Specify a name for the job. The specified name will appear along with
 the job id number when querying running jobs on the system. The default
 is the supplied \fBexecutable\fR program's name.
 .TP
-\fB\-B\fR, \fB--jobid\fR=\fIid\fR
+\fB--jobid\fR=\fIid\fR
 Initiate a job step under an already allocated job with job id \fIid\fR.
 Using this option will cause \fBsrun\fR to behave exactly as if the
 SLURM_JOBID environment variable was set.
@@ -242,13 +242,13 @@ sessions with the specified job and allow stdin and signals to be propagated.
 Constraint Options. The following options all put constraints on the nodes
 that may be considered for the job:
 .TP
-\fB\-P\fR, \fB\-\-mincpus\fR=\fIn\fR
+\fB\-\-mincpus\fR=\fIn\fR
 Specify minimum number of cpus per node.
 .TP
-\fB\-M\fR, \fB\-\-mem\fR=\fIMB\fR
+\fB\-\-mem\fR=\fIMB\fR
 Specify a minimum amount of real memory.
 .TP
-\fB\-S\fR, \fB\-\-tmp\fR=\fIMB\fR
+\fB\-\-tmp\fR=\fIMB\fR
 Specify a minimum amount of temporary disk space.
 .TP
 \fB\-C\fR, \fB\-\-constraint\fR=\fIlist\fR
@@ -264,7 +264,7 @@ features (i.e. the features are ORed together).
 If no nodes have the requested features, then the job will be rejected 
 by the slurm job manager.
 TP
-\fB\-g\fR, \fB\-\-contiguous\fR
+\fB\-\-contiguous\fR
 Demand a contiguous range of nodes. The default is "yes". Specify
 --contiguous=no if a contiguous range of nodes is not a constraint.
 .TP
