--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -13,6 +13,10 @@ documents those changes that are of interest to users and admins.
     to 1 when a node was down (even if up nodes could be used for the 
     job when a running job completes)
  -- Convert all user commands from use of popt library to getopt_long()
+ -- If TotalView support is requested, srun exports "totalview_jobid"
+    variable for `%J' expansion in TV bulk launch string.
+ -- Throttle back repetitious error messages in slurmd to avoid filling
+    slurm logfiles.
 
 * Changes in SLURM 0.2.20
 =========================
