o add missing NEWS item

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -17,7 +17,8 @@ documents those changes that are of interest to users and admins.
     variable for `%J' expansion in TV bulk launch string.
  -- Fix several locking bugs in slurmd IO layer.
  -- Throttle back repetitious error messages in slurmd to avoid filling
-    slurm logfiles.
+ -- Initial Elan4 and libelanctrl support (--with-elan).
+ 
 
 * Changes in SLURM 0.2.20
 =========================
